# issue-to-pr-bot

./: .dockerignore  .gitignore  .issue-to-pr-bot.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bot-task.yml
.github/workflows/: issue-comment.yml  pull-request-review-comment.yml  (+2 more)
app/: agent_runner.py  attachments.py  auto_merge.py  bot.py  codex_provider.py  codex_runner.py  config.py  github_pr.py  install_manager.py  llm_provider.py  main.py  metadata_rules.py  output_artifacts.py  prompting.py  release_channel.py  repo_context.py  repo_rules.py  review_merge_runner.py  run_configured_command.py  runtime_secrets.py  slot_inference.py  verification.py  verification_policy.py  versioning.py  workspace_state.py
bot-output/: issue-1.md
docs/: INSTALL.md  OPERATIONS.md
scripts/: build_standalone.py
templates/: .issue-to-pr-bot.yml.example  AGENTS.md.example  issue-comment.yml.example  pull-request-review-comment.yml.example  pull-request-review.yml.example
tests/: test_agent_runner.py  test_attachments.py  test_auto_merge.py  test_bot.py  test_codex_runner.py  test_config.py  test_github_pr.py  test_install_manager.py  test_llm_provider.py  test_main.py  test_metadata_rules.py  test_minimal_repository.py  test_prompting.py  test_release_channel.py  test_repo_context.py  test_repo_rules.py  test_review_comment_workflow.py  test_review_workflow.py  test_runtime_secrets.py  test_verification.py  test_worker_template.py  test_workspace_state.py
(+28 files in other folders)
