[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "issue-to-pr-bot-manager"
version = "0.3.4"
description = "Centralized installer and operations manager for issue-to-pr-bot target repositories."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "IncleRepo" }
]
dependencies = []

[project.scripts]
issue-to-pr-bot-manager = "app.install_manager:main"
issue-to-pr-bot-agent = "app.agent_runner:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.manager_templates" = ["*.example"]
"app.worker_templates" = ["**/*", "*"]
